# algostudio

./: .gitignore  README.md
.cursor/rules/: problem-docs.mdc
apps/visualizer/: index.html  package-lock.json  package.json  vite.config.ts
apps/visualizer/src/: App.css  App.tsx  index.css
apps/visualizer/src/components/: ArrayBars.tsx  HashMapView.tsx  StepControls.tsx
apps/visualizer/src/lib/: data.ts  types.ts
apps/visualizer/src/pages/: ProblemDetail.tsx  ProblemList.tsx
content/: manifest.json
content/problems/arrays/: two-sum.json
content/problems/searching/: binary-search.json
content/problems/sorting/: bubble-sort.json
cpp/: CMakeLists.txt
cpp/src/arrays/: basics.cpp  check-version.cpp  dynamic-array.cpp  two-sum.cpp
cpp/src/searching/: binary-search.cpp
cpp/src/sorting/: bubble-sort.cpp
docs/: roadmap.md
docs/notes/arrays/: dynamic-array.md
docs/notes/cpp/: fundamentals.md  std-library-reference.md
docs/patterns/: bfs-dfs.md  sliding-window.md  two-pointers.md
docs/plans/: cpp-fundamentals.md  cpp-part3-templates-to-qa.md  cpp-stdlib-dsa.md  dsa-platform.md  dynamic-array-notes.md
docs/problems/arrays/: two-sum.md
docs/problems/searching/: binary-search.md
docs/problems/sorting/: bubble-sort.md
go/: go.mod
go/problems/arrays/: two-sum.go  two_sum_test.go
go/problems/searching/: binary-search.go  binary_search_test.go
go/problems/sorting/: bubble-sort.go  bubble_sort_test.go
scripts/: new-problem.sh
